src/minijava/parser/MiniJavaParser.java
// Generated from MiniJava.g4 by ANTLR 4.6
package minijava.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MiniJavaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, PACKAGENAME=42, LONGARRAYNAME=43, LONGNAME=44, 
		BOOLEANARRAYNAME=45, BOOLEANNAME=46, BOOLEAN=47, NUMBER=48, WS=49;
	public static final int
		RULE_program = 0, RULE_block = 1, RULE_statement = 2, RULE_expressionNumeric = 3, 
		RULE_expressionBoolean = 4, RULE_longArrayDeclaration = 5, RULE_longArrayValue = 6, 
		RULE_longArrayName = 7, RULE_longDeclaration = 8, RULE_longName = 9, RULE_booleanArrayDeclaration = 10, 
		RULE_booleanArrayValue = 11, RULE_booleanArrayName = 12, RULE_booleanDeclaration = 13, 
		RULE_booleanName = 14, RULE_numberValue = 15, RULE_booleanValue = 16, 
		RULE_packageName = 17;
	public static final String[] ruleNames = {
		"program", "block", "statement", "expressionNumeric", "expressionBoolean", 
		"longArrayDeclaration", "longArrayValue", "longArrayName", "longDeclaration", 
		"longName", "booleanArrayDeclaration", "booleanArrayValue", "booleanArrayName", 
		"booleanDeclaration", "booleanName", "numberValue", "booleanValue", "packageName"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'package'", "';'", "'import java.util.ArrayList;'", "'import java.util.Collections;'", 
		"'public class GeneticProgram {'", "'public static ArrayList<Long> compute(ArrayList<Long> values00)'", 
		"'}'", "'{'", "'return values00;'", "'if('", "') {'", "'} else {'", "'while('", 
		"'.set('", "', new Long('", "'));'", "'='", "', new Boolean('", "'('", 
		"')'", "'^'", "'%'", "'*'", "'/'", "'+'", "'-'", "'.'", "'length'", "'<'", 
		"'<='", "'=='", "'!='", "'&&'", "'||'", "'ArrayList<Long>'", "'= new ArrayList<Long>(Collections.nCopies(values00.length,'", 
		"'.get('", "'Long'", "'ArrayList<Boolean>'", "'= new ArrayList<Boolean>(Collections.nCopies(values00.length,'", 
		"'Boolean'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, "PACKAGENAME", "LONGARRAYNAME", "LONGNAME", 
		"BOOLEANARRAYNAME", "BOOLEANNAME", "BOOLEAN", "NUMBER", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MiniJava.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MiniJavaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public PackageNameContext packageName() {
			return getRuleContext(PackageNameContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode EOF() { return getToken(MiniJavaParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			match(T__0);
			setState(37);
			packageName();
			setState(38);
			match(T__1);
			setState(39);
			match(T__2);
			setState(40);
			match(T__3);
			setState(41);
			match(T__4);
			setState(42);
			match(T__5);
			setState(43);
			block();
			setState(44);
			match(T__6);
			setState(45);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public List<LongArrayDeclarationContext> longArrayDeclaration() {
			return getRuleContexts(LongArrayDeclarationContext.class);
		}
		public LongArrayDeclarationContext longArrayDeclaration(int i) {
			return getRuleContext(LongArrayDeclarationContext.class,i);
		}
		public List<LongDeclarationContext> longDeclaration() {
			return getRuleContexts(LongDeclarationContext.class);
		}
		public LongDeclarationContext longDeclaration(int i) {
			return getRuleContext(LongDeclarationContext.class,i);
		}
		public List<BooleanArrayDeclarationContext> booleanArrayDeclaration() {
			return getRuleContexts(BooleanArrayDeclarationContext.class);
		}
		public BooleanArrayDeclarationContext booleanArrayDeclaration(int i) {
			return getRuleContext(BooleanArrayDeclarationContext.class,i);
		}
		public List<BooleanDeclarationContext> booleanDeclaration() {
			return getRuleContexts(BooleanDeclarationContext.class);
		}
		public BooleanDeclarationContext booleanDeclaration(int i) {
			return getRuleContext(BooleanDeclarationContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			match(T__7);
			setState(51);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__34) {
				{
				{
				setState(48);
				longArrayDeclaration();
				}
				}
				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__37) {
				{
				{
				setState(54);
				longDeclaration();
				}
				}
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__38) {
				{
				{
				setState(60);
				booleanArrayDeclaration();
				}
				}
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__40) {
				{
				{
				setState(66);
				booleanDeclaration();
				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__9) | (1L << T__12) | (1L << LONGARRAYNAME) | (1L << LONGNAME) | (1L << BOOLEANARRAYNAME) | (1L << BOOLEANNAME))) != 0)) {
				{
				{
				setState(72);
				statement();
				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(78);
			match(T__8);
			setState(79);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public ExpressionBooleanContext expressionBoolean() {
			return getRuleContext(ExpressionBooleanContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public LongArrayNameContext longArrayName() {
			return getRuleContext(LongArrayNameContext.class,0);
		}
		public List<ExpressionNumericContext> expressionNumeric() {
			return getRuleContexts(ExpressionNumericContext.class);
		}
		public ExpressionNumericContext expressionNumeric(int i) {
			return getRuleContext(ExpressionNumericContext.class,i);
		}
		public LongNameContext longName() {
			return getRuleContext(LongNameContext.class,0);
		}
		public BooleanArrayNameContext booleanArrayName() {
			return getRuleContext(BooleanArrayNameContext.class,0);
		}
		public BooleanNameContext booleanName() {
			return getRuleContext(BooleanNameContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(119);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__9:
				enterOuterAlt(_localctx, 1);
				{
				setState(81);
				match(T__9);
				setState(82);
				expressionBoolean(0);
				setState(83);
				match(T__10);
				setState(84);
				statement();
				setState(85);
				match(T__11);
				setState(86);
				statement();
				setState(87);
				match(T__6);
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 2);
				{
				setState(89);
				match(T__12);
				setState(90);
				expressionBoolean(0);
				setState(91);
				match(T__10);
				setState(92);
				statement();
				setState(93);
				match(T__6);
				}
				break;
			case LONGARRAYNAME:
				enterOuterAlt(_localctx, 3);
				{
				setState(95);
				longArrayName();
				setState(96);
				match(T__13);
				setState(97);
				expressionNumeric(0);
				setState(98);
				match(T__14);
				setState(99);
				expressionNumeric(0);
				setState(100);
				match(T__15);
				}
				break;
			case LONGNAME:
				enterOuterAlt(_localctx, 4);
				{
				setState(102);
				longName();
				setState(103);
				match(T__16);
				setState(104);
				expressionNumeric(0);
				setState(105);
				match(T__1);
				}
				break;
			case BOOLEANARRAYNAME:
				enterOuterAlt(_localctx, 5);
				{
				setState(107);
				booleanArrayName();
				setState(108);
				match(T__13);
				setState(109);
				expressionNumeric(0);
				setState(110);
				match(T__17);
				setState(111);
				expressionBoolean(0);
				setState(112);
				match(T__15);
				}
				break;
			case BOOLEANNAME:
				enterOuterAlt(_localctx, 6);
				{
				setState(114);
				booleanName();
				setState(115);
				match(T__16);
				setState(116);
				expressionBoolean(0);
				setState(117);
				match(T__1);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionNumericContext extends ParserRuleContext {
		public List<ExpressionNumericContext> expressionNumeric() {
			return getRuleContexts(ExpressionNumericContext.class);
		}
		public ExpressionNumericContext expressionNumeric(int i) {
			return getRuleContext(ExpressionNumericContext.class,i);
		}
		public LongArrayNameContext longArrayName() {
			return getRuleContext(LongArrayNameContext.class,0);
		}
		public LongArrayValueContext longArrayValue() {
			return getRuleContext(LongArrayValueContext.class,0);
		}
		public LongNameContext longName() {
			return getRuleContext(LongNameContext.class,0);
		}
		public NumberValueContext numberValue() {
			return getRuleContext(NumberValueContext.class,0);
		}
		public ExpressionNumericContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressionNumeric; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).enterExpressionNumeric(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).exitExpressionNumeric(this);
		}
	}

	public final ExpressionNumericContext expressionNumeric() throws RecognitionException {
		return expressionNumeric(0);
	}

	private ExpressionNumericContext expressionNumeric(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionNumericContext _localctx = new ExpressionNumericContext(_ctx, _parentState);
		ExpressionNumericContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_expressionNumeric, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(122);
				match(T__18);
				setState(123);
				expressionNumeric(0);
				setState(124);
				match(T__19);
				}
				break;
			case 2:
				{
				setState(126);
				longArrayName();
				setState(127);
				match(T__26);
				setState(128);
				match(T__27);
				}
				break;
			case 3:
				{
				setState(130);
				longArrayValue();
				}
				break;
			case 4:
				{
				setState(131);
				longName();
				}
				break;
			case 5:
				{
				setState(132);
				numberValue();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(146);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(144);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
					case 1:
						{
						_localctx = new ExpressionNumericContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expressionNumeric);
						setState(135);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						setState(136);
						_la = _input.LA(1);
						if ( !(_la==T__20 || _la==T__21) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(137);
						expressionNumeric(8);
						}
						break;
					case 2:
						{
						_localctx = new ExpressionNumericContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expressionNumeric);
						setState(138);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(139);
						_la = _input.LA(1);
						if ( !(_la==T__22 || _la==T__23) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(140);
						expressionNumeric(7);
						}
						break;
					case 3:
						{
						_localctx = new ExpressionNumericContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expressionNumeric);
						setState(141);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(142);
						_la = _input.LA(1);
						if ( !(_la==T__24 || _la==T__25) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(143);
						expressionNumeric(6);
						}
						break;
					}
					} 
				}
				setState(148);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ExpressionBooleanContext extends ParserRuleContext {
		public List<ExpressionBooleanContext> expressionBoolean() {
			return getRuleContexts(ExpressionBooleanContext.class);
		}
		public ExpressionBooleanContext expressionBoolean(int i) {
			return getRuleContext(ExpressionBooleanContext.class,i);
		}
		public List<ExpressionNumericContext> expressionNumeric() {
			return getRuleContexts(ExpressionNumericContext.class);
		}
		public ExpressionNumericContext expressionNumeric(int i) {
			return getRuleContext(ExpressionNumericContext.class,i);
		}
		public BooleanArrayValueContext booleanArrayValue() {
			return getRuleContext(BooleanArrayValueContext.class,0);
		}
		public BooleanNameContext booleanName() {
			return getRuleContext(BooleanNameContext.class,0);
		}
		public BooleanValueContext booleanValue() {
			return getRuleContext(BooleanValueContext.class,0);
		}
		public ExpressionBooleanContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressionBoolean; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).enterExpressionBoolean(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).exitExpressionBoolean(this);
		}
	}

	public final ExpressionBooleanContext expressionBoolean() throws RecognitionException {
		return expressionBoolean(0);
	}

	private ExpressionBooleanContext expressionBoolean(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionBooleanContext _localctx = new ExpressionBooleanContext(_ctx, _parentState);
		ExpressionBooleanContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_expressionBoolean, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(150);
				match(T__18);
				setState(151);
				expressionBoolean(0);
				setState(152);
				match(T__19);
				}
				break;
			case 2:
				{
				setState(154);
				expressionNumeric(0);
				setState(155);
				_la = _input.LA(1);
				if ( !(_la==T__28 || _la==T__29) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(156);
				expressionNumeric(0);
				}
				break;
			case 3:
				{
				setState(158);
				expressionNumeric(0);
				setState(159);
				_la = _input.LA(1);
				if ( !(_la==T__30 || _la==T__31) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(160);
				expressionNumeric(0);
				}
				break;
			case 4:
				{
				setState(162);
				booleanArrayValue();
				}
				break;
			case 5:
				{
				setState(163);
				booleanName();
				}
				break;
			case 6:
				{
				setState(164);
				booleanValue();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(178);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(176);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
					case 1:
						{
						_localctx = new ExpressionBooleanContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expressionBoolean);
						setState(167);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(168);
						_la = _input.LA(1);
						if ( !(_la==T__30 || _la==T__31) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(169);
						expressionBoolean(7);
						}
						break;
					case 2:
						{
						_localctx = new ExpressionBooleanContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expressionBoolean);
						setState(170);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(171);
						match(T__32);
						setState(172);
						expressionBoolean(6);
						}
						break;
					case 3:
						{
						_localctx = new ExpressionBooleanContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expressionBoolean);
						setState(173);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(174);
						match(T__33);
						setState(175);
						expressionBoolean(5);
						}
						break;
					}
					} 
				}
				setState(180);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class LongArrayDeclarationContext extends ParserRuleContext {
		public LongArrayNameContext longArrayName() {
			return getRuleContext(LongArrayNameContext.class,0);
		}
		public ExpressionNumericContext expressionNumeric() {
			return getRuleContext(ExpressionNumericContext.class,0);
		}
		public LongArrayDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_longArrayDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).enterLongArrayDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).exitLongArrayDeclaration(this);
		}
	}

	public final LongArrayDeclarationContext longArrayDeclaration() throws RecognitionException {
		LongArrayDeclarationContext _localctx = new LongArrayDeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_longArrayDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(181);
			match(T__34);
			setState(182);
			longArrayName();
			setState(183);
			match(T__35);
			setState(184);
			expressionNumeric(0);
			setState(185);
			match(T__15);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LongArrayValueContext extends ParserRuleContext {
		public LongArrayNameContext longArrayName() {
			return getRuleContext(LongArrayNameContext.class,0);
		}
		public ExpressionNumericContext expressionNumeric() {
			return getRuleContext(ExpressionNumericContext.class,0);
		}
		public LongArrayValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_longArrayValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).enterLongArrayValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).exitLongArrayValue(this);
		}
	}

	public final LongArrayValueContext longArrayValue() throws RecognitionException {
		LongArrayValueContext _localctx = new LongArrayValueContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_longArrayValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(187);
			longArrayName();
			setState(188);
			match(T__36);
			setState(189);
			expressionNumeric(0);
			setState(190);
			match(T__19);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LongArrayNameContext extends ParserRuleContext {
		public TerminalNode LONGARRAYNAME() { return getToken(MiniJavaParser.LONGARRAYNAME, 0); }
		public LongArrayNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_longArrayName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).enterLongArrayName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).exitLongArrayName(this);
		}
	}

	public final LongArrayNameContext longArrayName() throws RecognitionException {
		LongArrayNameContext _localctx = new LongArrayNameContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_longArrayName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(192);
			match(LONGARRAYNAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LongDeclarationContext extends ParserRuleContext {
		public LongNameContext longName() {
			return getRuleContext(LongNameContext.class,0);
		}
		public LongDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_longDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).enterLongDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).exitLongDeclaration(this);
		}
	}
